# home-work-08

./: CMakeLists.txt  Doxyfile  DuplicateSearch.cpp  DuplicateSearch.h  FileList.cpp  FileList.h  FileReader.cpp  FileReader.h  HashCalculator.cpp  HashCalculator.h  README.md  SearchParameters.cpp  SearchParameters.h  annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  main.cpp  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
.github/workflows/: release.yml
d0/d30/: md_README.html
d1/d5a/: SearchParameters_8cpp__incl.map  SearchParameters_8cpp__incl.md5
d1/da8/: HashCalculator_8h__incl.map  HashCalculator_8h__incl.md5
d1/db4/: DuplicateSearch_8cpp.html  DuplicateSearch_8cpp_source.html
d1/dc3/: SearchParameters_8cpp.html  SearchParameters_8cpp_source.html
d2/d40/: classFileList__coll__graph.map  (+1 more)
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_3.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_c.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js
(+69 files in other folders)
